[package]
name = "ralaire"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
    "std",
] }
winit = { version = "0.30.3", default-features = false, features = [
    "rwh_06",
    "wayland",
] }
wgpu = "0.20.0"
vello = { path = "../vello/vello" }
vello_svg = { path = "../vello_svg" }
parley = { git = "https://github.com/dfrg/parley" }
rayon = "1.8.0"
itertools = "0.13.0"
image = "0.25.1"
rand = "0.8.5"
